<resources>
    <string name="app_name">3717 Project</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="login_btn_text">Login</string>
    <string name="signup">Sign up</string>
    <string name="no_account">You don\'t have an account yet? Make one here!</string>
    <string name="yes_account">Already have an account yet? Login in from here!</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="email">email</string>
    <string name="welcome">Welcome to</string>
    <string name="title">Trip Connect</string>
    <string name="landing_description">Connect your trip to a\nloved one’s device.</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="brand">Tech Adventures Inc.</string>

    <string name="hello_text">Hello, </string>
    <string name="trip_question_text">Are you </string>
    <string name="or_text">OR</string>
    <string name="take_trip_btn">Taking a Trip</string>
    <string name="other_trip_btn">Watching someone else\'s trip </string>

    <string name="trip_type">Enter your trip type:</string>
    <string name="flight_btn">Flight</string>
    <string name="train_ride_btn">Train Ride</string>
    <string name="taxi_btn">Taxi / Uber</string>

    <string name="find_flight">Find your Flight:</string>
    <string name="flight_number">Flight number</string>
    <string name="my_trip">My Trip:</string>
    <string name="flight_data">01234YVR : YVR - YYC\n22:30 June 10, 2022</string>
    <string name="enter_trip_name">Enter Trip Name</string>
    <string name="share_my_trip">Share My Trip</string>
    <string name="map_description">Feel a sense of peace, track your loved one\'s trip to make sure they are safe.</string>
    <string name="trip_code">Please entre trip code</string>
    <string name="code">Code:</string>


</resources>